site/src/_styles.css
/* ... */
/* === BASE === */

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  background: #fff;
  font-family: system-ui, sans-serif;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23bababa' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
}

a {
  color: #000;
  text-decoration-color: #ccc;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

a:hover  {
  text-decoration-color: #000;
}


/* === MENU NAVIGATION === */

#menu details {
  position: absolute;
  z-index: 3;
  top: 0.5rem;
  right: 0.5rem;
  padding: 0.5rem;
  border: 2px solid transparent;
}

#menu details[open] {
  background: rgba(255,255,255,0.98);
  border: 2px solid #000;
  box-shadow: 3px 3px 0 0 rgba(180,180,180,0.30);
}

#menu summary {
  list-style: none;
  cursor: pointer;
  text-align: right;
  float: right;
  padding: 0.5rem;
  margin-top: -0.5rem;
  margin-right: -0.5rem;
}

#menu summary::-webkit-details-marker {
  display: none;
}

#menu #i-close,
#menu details[open] #i-menu { display: none; }
#menu details[open] #i-close { display: block; }

#menu nav {
  display: flex;
  flex-direction: column;
  padding-bottom: 0.25rem;
  min-width: 7rem;
}

#menu nav a {
  color: #000;
  font-size: 1.125rem;
  padding: 0.5rem 1rem;
  margin: 0 -0.75rem;
  font-weight: 400;
  text-decoration: none;
}

#menu nav a:hover {
  color: #202020;
  text-decoration: underline;
}


/* === ABOUT HEADER === */

header {
  width: 100%;
  margin: 0;
  padding: 2.5rem 0.5rem;
  background: #fff;
  border-bottom: 1px solid #ddd;
  font-family: 'Avenir Next', 'Avenir Next LT Pro', Montserrat, Corbel, 'Noto Sans', sans-serif;
}

header > div {
  width: 100%;
  max-width: 48rem;
  margin: 0 auto;
  text-align: center;
}

header svg {
  display: block;
  margin: 0 auto;
}

header h1 {
  font-family: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
  font-size: 2.25rem;
  line-height: 1.1;
  text-align: center;
  margin: 0.5rem 1rem 1rem;
  font-weight: 400;
}

header h2 {
  font-size: 1.25rem;
  line-height: 1.3;
  text-align: center;
  margin: 0.75rem;
  font-weight: 500;
}

header p {
  font-size: 1.125rem;
  line-height: 1.5;
}

#about-buttons {
  display: flex;
  justify-content: center;
  padding: 0.5rem 1rem 1rem;
  gap: 0.75rem;
}

.btn {
  display: inline-flex;
  gap: 0.5rem;
  justify-content: center;
  position: relative;
  font-size: 1rem;
  line-height: 1;
  font-weight: 600;
  align-items: center;
  text-decoration: none;
  padding: 0.5rem 1.25rem;
  border: 2px solid #ddd;
  border-radius: 4px;
  background: #fdfdfd;
}

.btn:hover {
  border: 2px solid #aaa;
}

.btn:active {
  top: 1px;
}


/* === UI ELEMENTS === */

section > h2 {
  font-size: 1rem;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 400;
  background: #252525;
  color: #fff;
  margin: 0;
  padding: 1rem;
  border-top: 1px solid #353535;
  border-bottom: 1px solid #353535;
}

.ui-bg {
  position: sticky;
  top: 0;
  z-index: 2;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  background: #000;
  color: #fff;
}

.ui {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: start;
  width: 100%;
  max-width: 72rem;
  margin: 0 auto;
  padding: 0 1rem;
  gap: 0 1rem;
}

.ui > div {
  flex: 1 auto;
  max-width: calc(50% - 0.5rem);
  padding: 0.75rem 0;
}

.ui div label {
  display: block;
  font-size: 0.75rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  padding-bottom: 0.5rem;
  color: #808080;
  font-weight: 600;
  white-space: nowrap;
}

.ui div input {
  width: 100%;
  appearance: none;
  background: #404040;
  height: 3px;
  border-radius: 2px;
  cursor: grab;
}

.ui div input:active {
  cursor: grabbing;
}

.ui div input::-webkit-slider-thumb {
  appearance: none;
  width: .25rem;
  height: 1.25rem;
  background: #fff;
  border-radius: 1rem;
  border: none;
}

.ui div input::-moz-range-thumb {
  width: .25rem;
  height: 1.25rem;
  background: #fff;
  border-radius: 1rem;
  border: none;
}

.ui div output {
  color: #fff;
  display: inline-block;
  min-width: 3.5rem;
}

#sizeoutput:after {
  content: "em";
  text-transform: lowercase;
}

#preview-text {
  width: 100%;
  flex: 1 auto;
  appearance: none;
  border-radius: 3px;
  border: none;
  background: transparent;
  color: #fff;
  padding: 0.5rem 0 1rem;
  outline: none;
}

#preview-text::-webkit-search-cancel-button {
  appearance: none;
  display: inline-block;
  width: 12px;
  height: 12px;
  margin-left: 10px;
  background:
    linear-gradient(45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 43%,#ccc 45%,#ccc 55%,rgba(0,0,0,0) 57%,rgba(0,0,0,0) 100%),
    linear-gradient(135deg, transparent 0%,transparent 43%,#ccc 45%,#ccc 55%,transparent 57%,transparent 100%);
  cursor: pointer:
}


/* === SECTION: FONT STACKS === */

#fonts {
  text-align: center;
  max-width: 84rem;
  margin: 0 auto;
  padding: 2rem 1rem 4rem;
  font-size: 2rem;
}

.font-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 1.5rem;
  background: #fff;
  border: 1px solid #e5e7eb;
  border-bottom-width: 2px;
  border: 1px solid #888;
  box-shadow: 4px 4px 0 0 rgba(0,0,0,0.15);
}

.font-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.25rem 1rem;
  border-bottom: 1px solid #e5e7eb;
}

.font-title h3 {
  font-size: 1.5rem;
  margin: 0;
  font-weight: 400;
  text-align: left;
}

.font-callout {
  font-family: system-ui, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  white-space: nowrap;
  background: #eee;
  color: #505050;
  padding: 6px 10px;
  font-size: 13px;
  font-weight: 600;
  line-height: 1;
  border-radius: 20px;
}
/* ... */

